# claude-commander

./: .gitignore  CHANGELOG.md  Cargo.toml  ENHANCEMENTS.md  LICENSE  PLAN.md  README.md  REFACTOR_PLAN.md  TECH_ANALYSIS.md
.github/workflows/: release.yml
docs/: model-council.md  opencode-local-models.md  pr-review-phase-6-tasks-3-to-7.md  pr-review-pr13.md  pr-review-pr15.md  pr-review-pr18.md  pr-review-pr7.md  pr-review-pr8.md  pr-review-pr9.md  scroll-fixes.md  tech-analysis-2026-04-12.md
docs/designs/: response-boundary-detection.md  session-management.md  stats-panel.md
docs/plans/: phase-3.5-hook-boundary.md  phase-3.5-review-fixes.md  phase-4-mcp-readonly.md  phase-5-mcp-write.md  phase-6-driver-role.md  phase-7-approval-routing.md  phase-7-task-11-verification.md  phase-8-session-groups.md  session-management-phase-1-3.md  session-management-phase-4-6.md
scripts/: ccom-statusline.sh  ccom-statusline.sh.bak
src/: app.rs  approvals.rs  approvals_state.rs  driver_config.rs  event.rs  lib.rs  main.rs  setup.rs  update.rs
src/app/: attach.rs  keys.rs  mod.rs  render.rs
src/claude/: context.rs  discovery.rs  launcher.rs  mod.rs  rate_limit.rs  usage.rs
src/fs/: git.rs  mod.rs  tree.rs
src/mcp/: confirm.rs  handlers.rs  mod.rs  sanitize.rs  server.rs  state.rs
src/pty/: detector.rs  mod.rs  response_boundary.rs  session.rs
src/session/: events.rs  hook.rs  manager.rs  mod.rs  response_store.rs  types.rs
src/ui/: layout.rs  mod.rs  (+1 more)
tests/: approval_routing.rs  driver_spawn.rs  mcp_readonly.rs  mcp_write.rs  spike_caller_header.rs  unit_tests.rs
(+20 files in other folders)
